# arr-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md
.github/config/: grcov.yml
.github/workflows/: benchmark.yml  changelog.yml  default.yml  publish.yml  publish_dev.yml  versions.yml
benches/: bench_array_create.rs  bench_array_product.rs  bench_array_sum.rs  main.rs
src/: lib.rs  prelude.rs
src/alphanumeric/: prelude.rs
src/alphanumeric/operations/: compare.rs  indexing.rs  manipulate.rs  mod.rs  validate.rs
src/alphanumeric/types/: char.rs  mod.rs  string.rs
src/arrays/: array.rs  axis.rs  base.rs  broadcast.rs  create.rs  indexing.rs  macros.rs  manipulate.rs  math.rs  meta.rs  mod.rs
src/arrays/alphanumeric/: mod.rs
src/arrays/binary/: mod.rs
src/arrays/impls/: display.rs  iter.rs  mod.rs  ops.rs
src/arrays/macros/: arange.rs  create.rs  eye.rs  flat.rs  full.rs  identity.rs  mod.rs  ones.rs  rand.rs  zeros.rs
src/arrays/manipulate/: axis.rs  broadcast.rs  iter.rs  mod.rs  reorder.rs  split.rs  stack.rs
src/base/: base_array.rs  base_type.rs  compare.rs  display.rs  iter.rs  mod.rs  ops.rs
src/boolean/: prelude.rs
src/boolean/operations/: mod.rs  ops.rs
src/boolean/types/: mod.rs
src/core/: mod.rs  prelude.rs
src/core/array/: mod.rs
src/core/operations/: axis.rs  broadcast.rs  count.rs  create.rs  display.rs  indexing.rs  iter.rs  joining.rs  manipulate.rs  meta.rs  mod.rs  ops.rs  reorder.rs  search.rs  sort.rs  split.rs  stack.rs  tiling.rs
src/core/types/: mod.rs
src/errors/: mod.rs  prelude.rs
src/ext/: mod.rs  vec_ext.rs
src/extensions/: array_ext.rs  chars_ext.rs  iter_ext.rs  mod.rs  prelude.rs  tuple_ext.rs  vec_ext.rs  vec_sort_ext.rs
src/linalg/: prelude.rs
src/linalg/operations/: common.rs  decompositions.rs  eigen.rs  mod.rs  norms.rs  products.rs  solving_inverting.rs
src/linalg/types/: mod.rs
src/macros/: arange.rs  create.rs  eye.rs  flat.rs  full.rs  helpers.rs  identity.rs  mod.rs  ones.rs  prelude.rs  rand.rs  single.rs  zeros.rs
src/math/: mod.rs  prelude.rs
src/math/operations/: arithmetic.rs  exp_log.rs  extrema.rs  floating.rs  folding.rs  hyperbolic.rs  misc.rs  mod.rs  rational.rs  rounding.rs  special.rs  sum_prod_diff.rs  trigonometric.rs
src/numeric/: prelude.rs
src/traits/: axis.rs  create.rs  indexing.rs  manipulate.rs  math.rs  meta.rs  mod.rs  types.rs
src/validators/: axis.rs  compare.rs  dimension.rs  has_error.rs  mod.rs  prelude.rs  shape.rs  unique.rs
tests/: lib.rs
tests/alphanumeric/: mod.rs
tests/arr_rs_tests/: alphanumeric_test.rs  array_test.rs  axis_test.rs  binary_test.rs  broadcast_test.rs  common.rs  compare_test.rs  create_from_test.rs  create_matrix_test.rs  create_range_test.rs  create_test.rs  display_test.rs  indexing_test.rs  iter_test.rs  macros_test.rs  manipulate_test.rs  math_test.rs  meta_test.rs  mod.rs  ops_test.rs  split_test.rs  stack_test.rs
tests/macros/: arange_test.rs  create_test.rs  eye_test.rs  flat_test.rs  full_test.rs  identity_test.rs  mod.rs  ones_test.rs  rand_test.rs  single_test.rs  zeros_test.rs
(+134 files in other folders)
