[package]
name = "arr-rs"
version = "0.5.1"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
description = "arr-rs - rust arrays library"
keywords = ["arrays", "collections"]
categories = ["arrays", "collections", "data-structures", "science"]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/arr-rs"
license = "MIT OR Apache-2.0"
include = [
    "Cargo.toml", "Cargo.lock", "README.md",
    "LICENSE-APACHE", "LICENSE-MIT",
    "/src", "/tests", "/benches",
]

[package.metadata.docs.rs]
features = ["numeric", "alphanumeric", "boolean", "linalg", "math", "macros"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "arr_rs"
path = "src/lib.rs"

[features]
default = ["numeric", "alphanumeric", "boolean", "linalg", "math", "macros"]
numeric = []
alphanumeric = []
boolean = ["numeric"]
linalg = ["numeric"]
math = ["numeric"]
macros = ["numeric"]

[dependencies]
rand = "0.8"

[dev-dependencies]
rstest = "0.18"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
path = "benches/main.rs"
